--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "html-prettify": "^1.0.3",
     "jquery": "^3.6.0",
     "json2csv": "^5.0.6",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^10.1.0"
   },
   "devDependencies": {},
